--- a/bank-automat/onnistui.ui
+++ b/bank-automat/onnistui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1490</width>
-    <height>679</height>
+    <width>1695</width>
+    <height>825</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,11 +19,17 @@
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>171</width>
-     <height>191</height>
+     <x>10</x>
+     <y>10</y>
+     <width>200</width>
+     <height>230</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
    </property>
    <property name="maximumSize">
     <size>
@@ -47,23 +53,22 @@ background-repeat: none;</string>
     <rect>
      <x>650</x>
      <y>20</y>
-     <width>301</width>
+     <width>401</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>18</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QLabel{
+    <string notr="true">QWidget{
 	background-color: transparent;
-	color: rgb(0, 0, 0);
 	background: none;
+	color: rgb(0, 61, 0);
 	border: none;
-	background-repeat: none;
 	selection-color: rgb(0, 0, 0);
 }</string>
    </property>
@@ -74,7 +79,7 @@ background-repeat: none;</string>
   <widget class="QLineEdit" name="kayttajaNimi">
    <property name="geometry">
     <rect>
-     <x>960</x>
+     <x>1050</x>
      <y>20</y>
      <width>221</width>
      <height>41</height>
@@ -83,7 +88,7 @@ background-repeat: none;</string>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>18</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="focusPolicy">
@@ -93,6 +98,7 @@ background-repeat: none;</string>
     <string notr="true">QLineEdit{
 	background: transparent;
 	border: none;
+	color: rgb(0, 61, 0);
 }</string>
    </property>
   </widget>
@@ -101,8 +107,8 @@ background-repeat: none;</string>
     <rect>
      <x>220</x>
      <y>90</y>
-     <width>1251</width>
-     <height>561</height>
+     <width>1411</width>
+     <height>631</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -843,16 +849,16 @@ QPushButton:pressed{
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
-       <width>1261</width>
-       <height>561</height>
+       <y>10</y>
+       <width>1431</width>
+       <height>601</height>
       </rect>
      </property>
      <widget class="QLabel" name="tapahtumaSuoritettuTeksti">
       <property name="geometry">
        <rect>
         <x>480</x>
-        <y>250</y>
+        <y>230</y>
         <width>700</width>
         <height>130</height>
        </rect>
@@ -893,38 +899,39 @@ QPushButton:pressed{
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="paaValikkoonNappi">
-      <property name="geometry">
-       <rect>
-        <x>500</x>
-        <y>430</y>
-        <width>320</width>
-        <height>120</height>
-       </rect>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>320</width>
-        <height>120</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>320</width>
-        <height>120</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Ubuntu</family>
-        <pointsize>36</pointsize>
-       </font>
-      </property>
-      <property name="cursor">
-       <cursorShape>PointingHandCursor</cursorShape>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton{
+    </widget>
+    <widget class="QPushButton" name="paaValikkoonNappi">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>420</y>
+       <width>320</width>
+       <height>120</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>320</width>
+       <height>120</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>320</width>
+       <height>120</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Ubuntu</family>
+       <pointsize>36</pointsize>
+      </font>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
 	border-image: url(:/buttontausta.png);
 	background-color: transparent;
 	color: rgb(255, 255, 255);
@@ -942,11 +949,65 @@ QPushButton:pressed{
 	background-repeat: none;
 	selection-color: rgb(0, 0, 0);
 }</string>
-      </property>
-      <property name="text">
-       <string>Päävalikko</string>
-      </property>
-     </widget>
+     </property>
+     <property name="text">
+      <string>Päävalikko</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="kirjauduUlosNappi">
+     <property name="geometry">
+      <rect>
+       <x>870</x>
+       <y>420</y>
+       <width>320</width>
+       <height>120</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>320</width>
+       <height>120</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>320</width>
+       <height>120</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Ubuntu</family>
+       <pointsize>36</pointsize>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border-image: url(:/buttontausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/buttonpainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+     </property>
+     <property name="text">
+      <string>Kirjaudu ulos</string>
+     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="page_4">
@@ -955,15 +1016,15 @@ QPushButton:pressed{
       <rect>
        <x>-30</x>
        <y>30</y>
-       <width>1291</width>
-       <height>521</height>
+       <width>1421</width>
+       <height>581</height>
       </rect>
      </property>
      <widget class="QLabel" name="tapahtumaKeskeytetty">
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>220</y>
+        <y>210</y>
         <width>720</width>
         <height>130</height>
        </rect>
@@ -1004,11 +1065,66 @@ QPushButton:pressed{
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
+     <widget class="QPushButton" name="kirjauduUlosNappi_2">
+      <property name="geometry">
+       <rect>
+        <x>900</x>
+        <y>390</y>
+        <width>320</width>
+        <height>120</height>
+       </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>320</width>
+        <height>120</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>320</width>
+        <height>120</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu</family>
+        <pointsize>36</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+	border-image: url(:/buttontausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/buttonpainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+      </property>
+      <property name="text">
+       <string>Kirjaudu ulos</string>
+      </property>
+     </widget>
      <widget class="QPushButton" name="paaValikkoonNappi_2">
       <property name="geometry">
        <rect>
-        <x>530</x>
-        <y>400</y>
+        <x>520</x>
+        <y>390</y>
         <width>320</width>
         <height>120</height>
        </rect>
