--- a/bank-automat/tapahtumat.ui
+++ b/bank-automat/tapahtumat.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1577</width>
-    <height>689</height>
+    <width>1703</width>
+    <height>844</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,53 +16,20 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(224, 255, 237);</string>
   </property>
-  <widget class="QPushButton" name="takaisinNappi">
-   <property name="geometry">
-    <rect>
-     <x>1260</x>
-     <y>540</y>
-     <width>261</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Ubuntu</family>
-     <pointsize>22</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton{
-	border-image: url(:/buttontausta.png);
-	background-color: transparent;
-	color: rgb(255, 255, 255);
-	background: none;
-	border: none;
-	background-repeat: none;
-	selection-color: rgb(0, 0, 0);
-}
-QPushButton:pressed{
-	border-image: url(:/buttonpainettu.png);
-	background-color: transparent;
-	color: rgb(255, 255, 255);
-	background: none;
-	border: none;
-	background-repeat: none;
-	selection-color: rgb(0, 0, 0);
-}</string>
-   </property>
-   <property name="text">
-    <string>Palaa takaisin</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>171</width>
-     <height>191</height>
+     <x>10</x>
+     <y>10</y>
+     <width>200</width>
+     <height>230</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
    </property>
    <property name="maximumSize">
     <size>
@@ -84,25 +51,24 @@ background-repeat: none;</string>
   <widget class="QLabel" name="kirjautunutLabel">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>630</x>
      <y>20</y>
-     <width>301</width>
+     <width>401</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>18</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QLabel{
+    <string notr="true">QWidget{
 	background-color: transparent;
-	color: rgb(0, 0, 0);
 	background: none;
+	color: rgb(0, 61, 0);
 	border: none;
-	background-repeat: none;
 	selection-color: rgb(0, 0, 0);
 }</string>
    </property>
@@ -113,7 +79,7 @@ background-repeat: none;</string>
   <widget class="QLineEdit" name="kayttajaNimi">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>1030</x>
      <y>20</y>
      <width>221</width>
      <height>41</height>
@@ -122,13 +88,14 @@ background-repeat: none;</string>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>18</pointsize>
+     <pointsize>24</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit{
 	background: transparent;
 	border: none;
+	color: rgb(0, 61, 0);
 }</string>
    </property>
   </widget>
@@ -205,7 +172,7 @@ QPushButton:pressed{
     <string>seuraavaNappi</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="takaisinNappi2">
+  <widget class="QPushButton" name="takaisinNappi">
    <property name="geometry">
     <rect>
      <x>680</x>
@@ -254,6 +221,112 @@ QPushButton:pressed{
    </property>
    <property name="text">
     <string>takaisinNappi</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="kirjauduUlosNappi">
+   <property name="geometry">
+    <rect>
+     <x>1290</x>
+     <y>10</y>
+     <width>250</width>
+     <height>100</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>250</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>28</pointsize>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+	border-image: url(:/buttontausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/buttonpainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+   </property>
+   <property name="text">
+    <string>Kirjaudu ulos</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="nappiTakaisin">
+   <property name="geometry">
+    <rect>
+     <x>1310</x>
+     <y>630</y>
+     <width>250</width>
+     <height>100</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>250</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>28</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+	border-image: url(:/buttontausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/buttonpainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+   </property>
+   <property name="text">
+    <string>Palaa takaisin</string>
    </property>
   </widget>
  </widget>
