--- a/bank-automat/tapahtumat.ui
+++ b/bank-automat/tapahtumat.ui
@@ -114,11 +114,12 @@ background-repeat: none;</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QTextEdit {
-    background-color: white;
-    border: 2px solid green;
-    border-radius: 5px;
-}</string>
+    <string notr="true">QTextEdit{
+	background-color: transparent;
+	border: none;
+	color: rgb(0, 61, 0);
+}
+</string>
    </property>
   </widget>
   <widget class="QPushButton" name="seuraavaNappi">
