--- a/bank-automat/onnistui.ui
+++ b/bank-automat/onnistui.ui
@@ -6,9 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1695</width>
-    <height>825</height>
+    <width>2097</width>
+    <height>1023</height>
    </rect>
+  </property>
+  <property name="cursor">
+   <cursorShape>OpenHandCursor</cursorShape>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -51,9 +54,9 @@ background-repeat: none;</string>
   <widget class="QLabel" name="kirjautunutLabel">
    <property name="geometry">
     <rect>
-     <x>650</x>
+     <x>600</x>
      <y>20</y>
-     <width>401</width>
+     <width>391</width>
      <height>41</height>
     </rect>
    </property>
@@ -73,13 +76,13 @@ background-repeat: none;</string>
 }</string>
    </property>
    <property name="text">
-    <string>Olet nyt kirjautunut sisään,</string>
+    <string>Olet nyt kirjautunut sisään</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="kayttajaNimi">
    <property name="geometry">
     <rect>
-     <x>1050</x>
+     <x>995</x>
      <y>20</y>
      <width>221</width>
      <height>41</height>
@@ -105,11 +108,19 @@ background-repeat: none;</string>
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>90</y>
+     <x>320</x>
+     <y>240</y>
      <width>1411</width>
      <height>631</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QWidget{
+	background-color: transparent;
+	background: none;
+	border: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
    </property>
    <property name="currentIndex">
     <number>0</number>
@@ -118,17 +129,20 @@ background-repeat: none;</string>
     <widget class="QWidget" name="lahjoitusWidget" native="true">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>10</y>
+       <x>-40</x>
+       <y>120</y>
        <width>1301</width>
        <height>581</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <widget class="QLabel" name="vahvistaTeksti">
       <property name="geometry">
        <rect>
-        <x>870</x>
-        <y>240</y>
+        <x>860</x>
+        <y>220</y>
         <width>400</width>
         <height>120</height>
        </rect>
@@ -172,8 +186,8 @@ background-repeat: none;</string>
      <widget class="QPushButton" name="onnistuiKylla">
       <property name="geometry">
        <rect>
-        <x>860</x>
-        <y>390</y>
+        <x>850</x>
+        <y>370</y>
         <width>200</width>
         <height>81</height>
        </rect>
@@ -223,8 +237,8 @@ QPushButton:pressed{
      <widget class="QPushButton" name="onnistuiEi">
       <property name="geometry">
        <rect>
-        <x>1090</x>
-        <y>390</y>
+        <x>1080</x>
+        <y>370</y>
         <width>200</width>
         <height>81</height>
        </rect>
@@ -274,8 +288,8 @@ QPushButton:pressed{
      <widget class="QLineEdit" name="lahjoitusKohdeLineEdit">
       <property name="geometry">
        <rect>
-        <x>530</x>
-        <y>200</y>
+        <x>520</x>
+        <y>240</y>
         <width>250</width>
         <height>70</height>
        </rect>
@@ -332,8 +346,8 @@ QPushButton:pressed{
      <widget class="QLabel" name="lahjoitusLabel_2">
       <property name="geometry">
        <rect>
-        <x>210</x>
-        <y>200</y>
+        <x>200</x>
+        <y>240</y>
         <width>320</width>
         <height>70</height>
        </rect>
@@ -377,8 +391,8 @@ QPushButton:pressed{
      <widget class="QLineEdit" name="yhteensaQline">
       <property name="geometry">
        <rect>
-        <x>530</x>
-        <y>440</y>
+        <x>520</x>
+        <y>360</y>
         <width>250</width>
         <height>70</height>
        </rect>
@@ -435,8 +449,8 @@ QPushButton:pressed{
      <widget class="QLabel" name="nostoLabel_3">
       <property name="geometry">
        <rect>
-        <x>210</x>
-        <y>440</y>
+        <x>200</x>
+        <y>360</y>
         <width>320</width>
         <height>70</height>
        </rect>
